--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Weather Conditions</title>
-    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='scripts/app.js') }}" defer></script>
 </head>
 
 <body>
     <h1>Get Weather Conditions</h1>
-    <form action="/weather">
-        <input type="text" name="city" id="city" placeholder="Enter a City" />
+    <form action="/weather" id="weather-form">
+        <input type="text" name="city" id="city" placeholder="Enter a City" required>
+        <label for="units">Select Units:</label>
+        <select name="units" id="units">
+            <option value="imperial">Fahrenheit</option>
+            <option value="metric">Celsius</option>
+        </select>
         <button type="submit">Submit</button>
     </form>
 </body>
